Fix for gap causing overflow on footer

--- a/components/double-columns/style.scss
+++ b/components/double-columns/style.scss
@@ -2,6 +2,7 @@
     @extend %page-container;
     
     grid-template-columns: 1fr 1fr;
+    gap: 3rem;
 
     @media (max-width: $break-md) {
         grid-template-columns: 1fr;
